tdf#125777 restore old RenderContext before return

Regression from commit 710f3c63af2d ("tdf#125670 just check gradient
clipping on drawing")

Change-Id: I6acf23675414983bd07639703f43aa934c0a48ed
Reviewed-on: https://gerrit.libreoffice.org/74502
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>